# szdt

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  WHITEPAPER.md  justfile  log.md  logo.afdesign  spec.md
.github/workflows/: build-website.yml  rust.yml
research/: 2025-07-10-szdt-design-discussion.md  2025-07-19-wasm-plan.md  2025-07-20-wasm-bindgen.md  2025-07-20-workspace.md
rust/: Cargo.toml
rust/szdt-cli/: Cargo.toml
rust/szdt-cli/src/: config.rs  error.rs  file.rs  key_storage.rs  lib.rs  szdt.rs
rust/szdt-cli/src/db/: migrations.rs
rust/szdt-core/: Cargo.toml
rust/szdt-core/src/: bytes.rs  cbor_seq.rs  did.rs  ed25519.rs  ed25519_key_material.rs  error.rs  hash.rs  hashseq.rs  lib.rs  memo.rs  mnemonic.rs  nickname.rs  text.rs  value.rs
rust/szdt-wasm/: Cargo.toml  README.md
rust/szdt-wasm/scripts/: build-node.sh  build-web.sh  setup.sh
rust/szdt-wasm/src/: cbor_seq.rs  did_key.rs  ed25519_key_material.rs  hash.rs  lib.rs  memo.rs  mnemonic.rs
rust/szdt_cli/: Cargo.toml  README.md
rust/szdt_cli/src/: rand.rs
rust/szdt_core/: Cargo.toml  README.md
rust/szdt_core/src/: base58btc.rs  content_type.rs  ed25519_key_material.rs  error.rs  hashseq.rs  lib.rs  link.rs  text.rs
rust/szdt_wasm/: Cargo.toml
rust/szdt_wasm/src/: cbor_seq.rs  ed25519_key_material.rs  hash.rs  lib.rs  mnemonic.rs
scripts/: setup.sh
src/: archive.rs  bao.rs  base58btc.rs  byte_counter_reader.rs  bytes.rs  car.rs  car_claim_header.rs  cbor_seq.rs  cheaders.rs  cid.rs  claim.rs  config.rs  contact.rs  cose.rs  dasl_cid.rs  did.rs  ed25519.rs  ed25519_key_material.rs  envelope.rs  error.rs  file.rs  hash.rs  hashseq.rs  headers.rs  index.rs  key_storage.rs  lib.rs  link.rs  manifest.rs  memo.rs  mnemonic.rs  multiformats.rs  multihash.rs  nickname.rs  szdat.rs  szdt.rs  text.rs  time.rs  util.rs  value.rs  (+1 more)
src/bao/: archive.rs  claim_headers.rs  error.rs  hash.rs  hashseq.rs  header_archive.rs  manifest.rs  szdt.rs  szdt_reader.rs
src/db/: migrations.rs
src/util/: nickname.rs
website/: dev.md  eleventy.config.ts  index.md  package-lock.json  package.json  spec.md  tsconfig.json
website/_data/: site.js
website/_includes/: index.liquid  meta.liquid  sidebar.liquid
website/assets/: cancel.ts  demo.css  demo.ts  main.css  main.js
website/demo/: index.html
website/guides/: archives.md  keys.md  quick-start.md  quickstart.md
website/specs/: archives.md  explainer.md  memos.md  sequences.md
website/src/: demo.ts  dom.ts
website/static/: demo.js  main.css  shared.js
