[package]
name = "szdt"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "szdt"
path = "src/bin/szdt.rs"

[dependencies]
bao = "0.13.1"
blake3 = { version = "1.8.2", features = ["serde"] }
bs58 = "0.5.1"
cid = { version = "0.11.1", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
data-encoding = "2.8.0"
ed25519-dalek = { version = "2.1.1", features = [
    "alloc",
    "digest",
    "rand_core",
    "serde",
    "signature",
] }
multihash = "0.19.3"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "=0.6.3"
sha2 = "0.10.8"
thiserror = "2.0.12"
unsigned-varint = "0.8.0"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.19.1"
