[package]
name = "szdt"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "szdt"
path = "src/bin/szdt.rs"

[dependencies]
bip39 = "2.2.0"
blake3 = { version = "1.8.2", features = ["serde"] }
bs58 = "0.5.1"
cbor4ii = { version = "1.0.0", features = ["serde", "serde1", "use_alloc"] }
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
data-encoding = "2.8.0"
dirs = "6.0.0"
ed25519-dalek = { version = "2.1.1", features = [
    "alloc",
    "digest",
    "rand_core",
    "serde",
    "signature",
] }
mime_guess2 = "2.3.1"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "=0.6.3"
thiserror = "2.0.12"
unsigned-varint = "0.8.0"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.19.1"
