[package]
name = "szdt"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "szdt"
path = "src/bin/szdt.rs"

[dependencies]
bip39 = "2.2.0"
blake3 = { version = "1.8.2", features = ["serde"] }
bs58 = "0.5.1"
cbor4ii = { version = "1.0.0", features = ["serde", "serde1", "use_alloc"] }
clap = { version = "4.5.31", features = ["derive"] }
console = "0.16.0"
data-encoding = "2.8.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = [
    "alloc",
    "digest",
    "serde",
    "signature",
] }
mime_guess2 = "2.3.1"
rand = "0.9.1"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "=0.6.3"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["io-util", "macros", "rt"] }

[dev-dependencies]
tempfile = "3.19.1"
tokio-test = "0.4"
