[package]
name = "szdt_cli"
version = "0.0.1"
edition = "2024"
description = "SZDT CLI for signing and verifying data"
authors = ["Gordon Brander"]
license = "MIT"
keywords = ["szdt", "decentralization", "CBOR"]
repository = "https://github.com/gordonbrander/szdt"

[[bin]]
name = "szdt"
path = "src/bin/szdt.rs"

[dependencies]
clap = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
mime_guess2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
szdt_core = { version = "0.0.2", path = "../szdt_core" }

[dev-dependencies]
tempfile = { workspace = true }
