[package]
name = "szdt_core"
version = "0.0.2"
authors = ["Gordon Brander"]
edition = "2024"
description = "SZDT core functionality for encoding, decoding, signing, and hashing"
license = "MIT"
keywords = ["szdt", "decentralization", "censorship-resistance", "CBOR"]
repository = "https://github.com/gordonbrander/szdt"

[dependencies]
bip39 = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
cbor4ii = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
mime_guess2 = { workspace = true }
serde = { workspace = true }
serde_cbor_core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
