[package]
name = "szdt_wasm"
version = "0.0.1"
edition = "2024"
description = "WebAssembly bindings for SZDT"

[lib]
crate-type = ["cdylib"]

[dependencies]
szdt_core = { path = "../szdt_core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wee_alloc = "0.4"
serde_cbor_core = { workspace = true }
cbor4ii = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Crypto"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
